--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "dependencies": {
     "hardhat": "^2.12.4"
   },
+  "scripts": {
+    "hardhat": "npx hardhat node"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0"
   }
